fixed spacings

--- a/src/index.css
+++ b/src/index.css
@@ -359,7 +359,4 @@
     top: 89%;
     left: 84%;
   }
-  .O_main {
-    padding-top: 0;
-  }
 }
