--- a/src/stylesheets/components/organisms.css
+++ b/src/stylesheets/components/organisms.css
@@ -102,9 +102,9 @@
 
 @media (max-width: 768px) {
   .O_main {
-    padding-top: 80rem;
     gap: 80rem;
     margin: 0 auto;
+    padding: 0 16rem;
   }
   .O_menu {
     margin-top: 20rem;
